# docs/swagger.yaml
@@ -646,121 +646,6 @@ info:
   title: Rainbow-APP-Service
   version: "1.0"
 paths:
-  /activity/{activity_code}/nftconfigs:
-    post:
-      description: Add Activity NFT configs
-      operationId: AddActivityNftConfigs
-      parameters:
-      - description: Bearer JWT
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: activity nft configs
-        in: body
-        name: nft_configs
-        required: true
-        schema:
-          items:
-            $ref: '#/definitions/models.NftConfigUpdatePart'
-          type: array
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.NFTConfig'
-            type: array
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
-        "500":
-          description: Internal Server error
-          schema:
-            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
-      security:
-      - ApiKeyAuth: []
-      summary: Add Activity NFT configs
-      tags:
-      - POAP
-  /activity/nftconfig/{nft_config_id}:
-    delete:
-      description: Delete Activity NFT Config
-      operationId: DeleteActivityNftConfig
-      parameters:
-      - description: Bearer JWT
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: nft_config_id
-        in: path
-        name: nft_config_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.NFTConfig'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
-        "500":
-          description: Internal Server error
-          schema:
-            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete Activity NFT Config
-      tags:
-      - POAP
-    put:
-      description: Update Activity NFT Config
-      operationId: UpdateActivityNftConfig
-      parameters:
-      - description: Bearer JWT
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: nft_config_id
-        in: path
-        name: nft_config_id
-        required: true
-        type: integer
-      - description: update Nft config request
-        in: body
-        name: update_nft_config_request
-        required: true
-        schema:
-          $ref: '#/definitions/models.NftConfigUpdatePart'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.NFTConfig'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
-        "500":
-          description: Internal Server error
-          schema:
-            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
-      security:
-      - ApiKeyAuth: []
-      summary: Update Activity NFT Config
-      tags:
-      - POAP
   /bot/invite_url:
     get:
       description: get invite url
@@ -1336,6 +1221,46 @@ paths:
       summary: Update Activity
       tags:
       - POAP
+  /poap/activity/{activity_code}/nftconfigs:
+    post:
+      description: Add Activity NFT configs
+      operationId: AddActivityNftConfigs
+      parameters:
+      - description: Bearer JWT
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: activity nft configs
+        in: body
+        name: nft_configs
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/models.NftConfigUpdatePart'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.NFTConfig'
+            type: array
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
+        "500":
+          description: Internal Server error
+          schema:
+            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
+      security:
+      - ApiKeyAuth: []
+      summary: Add Activity NFT configs
+      tags:
+      - POAP
   /poap/activity/h5:
     post:
       description: Set H5 Page Config
@@ -1370,6 +1295,81 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Set H5 Config
+      tags:
+      - POAP
+  /poap/activity/nftconfig/{nft_config_id}:
+    delete:
+      description: Delete Activity NFT Config
+      operationId: DeleteActivityNftConfig
+      parameters:
+      - description: Bearer JWT
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: nft_config_id
+        in: path
+        name: nft_config_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.NFTConfig'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
+        "500":
+          description: Internal Server error
+          schema:
+            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete Activity NFT Config
+      tags:
+      - POAP
+    put:
+      description: Update Activity NFT Config
+      operationId: UpdateActivityNftConfig
+      parameters:
+      - description: Bearer JWT
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: nft_config_id
+        in: path
+        name: nft_config_id
+        required: true
+        type: integer
+      - description: update Nft config request
+        in: body
+        name: update_nft_config_request
+        required: true
+        schema:
+          $ref: '#/definitions/models.NftConfigUpdatePart'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.NFTConfig'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
+        "500":
+          description: Internal Server error
+          schema:
+            $ref: '#/definitions/appService_errors.RainbowAppServiceErrorDetailInfo'
+      security:
+      - ApiKeyAuth: []
+      summary: Update Activity NFT Config
       tags:
       - POAP
   /poap/activity/result/{activity_code}:
